# i18n-hunt

./: Cargo.toml  README.md
fixtures/: i18n-hunt.config
fixtures/locales/: Accounting.json
fixtures/locales/Auth/: Login.json
fixtures/locales/Auth/Admin/: Security.json
fixtures/locales/TeamManagement/: Locations.json
fixtures/src/: computed-map.ts  iterator-keys.ts  locations.ts  login.ts  map-access.ts
fixtures/src/auth/admin/: security.ts
fixtures/src/server/: accounting.ts
src/: cli.rs  main.rs
src/core/: analysis.rs  error.rs  locale.rs  mod.rs  source.rs
