[package]
name = "i18n-hunt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
oxc_allocator = "0.121.0"
oxc_ast = "0.121.0"
oxc_ast_visit = "0.121.0"
oxc_parser = "0.121.0"
oxc_span = "0.121.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ignore = "0.4.25"
toml = "0.8.19"
globset = "0.4.15"
owo-colors = "4.1.0"
